# canonzip

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
examples/terraform-aws-lambda/: .gitignore  .terraform.lock.hcl  README.md  main.tf
examples/terraform-aws-lambda/src/: handler.py
src/canonzip/: __init__.py  __main__.py  cli.py  exceptions.py  hashing.py  manifest.py  zipping.py
tests/: __init__.py  smoke_test.py  test_cli.py  test_hashing.py  test_manifest.py  test_zipping.py  util.py
