[project]
name = "canonzip"
version = "1.0.1"
requires-python = ">=3.11"

authors = [{ name = "Tyler Coles", email = "tylercoles@javadocmd.com" }]
description = "Produce canonical zips and hashes."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]

dependencies = [
    "pygit2==1.19.1",
    "typer==0.24.1",
]

[project.urls]
Repository = "https://github.com/JavadocMD/canonzip.git"

[project.scripts]
canonzip = "canonzip.cli:app"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.15.7",
]

[tool.ruff]
extend-exclude = ["examples"]

[tool.ruff.lint]
preview = true
select = ["ALL"]

# Ruff ignores:
# - CPY: no need for copyright notice at the top of every file
# - COM812: Ruff recommends disabling this when using formatter
ignore = ["CPY", "COM812"]

[tool.ruff.lint.extend-per-file-ignores]
# - S101: we are allowed to use `assert` in pytest
# - D103: no docstrings required
"tests/**/*.py" = ["S101", "D103"]

[tool.ruff.lint.flake8-builtins]
ignorelist = ["hash", "zip"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
preview = true
